@@ -63,7 +63,7 @@
         <commons.compress.version>1.8.1</commons.compress.version>
         <commons.io.version>2.4</commons.io.version>
         <commons.lang.version>2.5</commons.lang.version>
-        <curator.version>1.0.1</curator.version>
+        <curator.version>2.7.0</curator.version>
         <elasticsearch.version>1.1.0</elasticsearch.version>
         <evo.inflector.version>1.0.1</evo.inflector.version>
         <guice.version>3.0</guice.version>
@@ -82,12 +82,12 @@
         <metrics.version>3.0.1</metrics.version>
         <securegraph.version>0.8.1-SNAPSHOT</securegraph.version>
         <zip4j.version>1.3.1</zip4j.version>
-        <zookeeper.version>3.3.6</zookeeper.version>
+        <zookeeper.version>3.4.6</zookeeper.version>
         <jersey.version>1.18.1</jersey.version>
         <maven.plugin.version>3.1.6</maven.plugin.version>
 
         <!-- These versions align with storm -->
-        <storm.version>0.9.0.1</storm.version>
+        <storm.version>0.9.2-incubating</storm.version>
         <guava.version>13.0</guava.version>
         <slf4j.version>1.6.5</slf4j.version>
 
@@ -319,7 +319,7 @@
                 <version>${zookeeper.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.netflix.curator</groupId>
+                <groupId>org.apache.curator</groupId>
                 <artifactId>curator-framework</artifactId>
                 <version>${curator.version}</version>
                 <exclusions>
@@ -330,7 +330,7 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>com.netflix.curator</groupId>
+                <groupId>org.apache.curator</groupId>
                 <artifactId>curator-recipes</artifactId>
                 <version>${curator.version}</version>
                 <exclusions>
@@ -423,8 +423,8 @@
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
-                <groupId>storm</groupId>
-                <artifactId>storm</artifactId>
+                <groupId>org.apache.storm</groupId>
+                <artifactId>storm-core</artifactId>
                 <version>${storm.version}</version>
                 <exclusions>
                     <!-- This exclusion is required because this jetty is much older than the web jetty -->
@@ -643,6 +643,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.maven.surefire.version}</version>
+                    <configuration>
+                        <argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
+                    </configuration>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.plugins</groupId>
